Fix jumpy scrolling

--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -197,7 +197,7 @@ a.hilite:hover {
 .parallax {
   perspective: 300px;
   height: 100vh;
-  overflow-x: hidden;
+  overflow-x: scroll;
   overflow-y: auto;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d
